sonarqube issues fixes